--- a/catalog/core/catalog-core-standardframework/pom.xml
+++ b/catalog/core/catalog-core-standardframework/pom.xml
@@ -185,7 +185,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>${common-compress.version}</version>
+            <version>${commons-compress.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.lib</groupId>
