--- a/catalog/transformer/catalog-transformer-common/pom.xml
+++ b/catalog/transformer/catalog-transformer-common/pom.xml
@@ -52,13 +52,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>${common-compress.version}</version>
+            <version>${commons-compress.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.codice.thirdparty</groupId>
-            <artifactId>tika-bundle</artifactId>
-            <version>${tika.thirdparty.bundle.version}</version>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
