--- a/platform/metrics/platform-metrics-reporting/pom.xml
+++ b/platform/metrics/platform-metrics-reporting/pom.xml
@@ -4,7 +4,7 @@
  * Copyright (c) Codice Foundation
  *
  * This is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either
- * version 3 of the License, or any later version. 
+ * version 3 of the License, or any later version.
  *
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  * See the GNU Lesser General Public License for more details. A copy of the GNU Lesser General Public License is distributed along with this program and can be found at
@@ -79,8 +79,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math</artifactId>
-            <version>2.2</version>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons-math3.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.lib</groupId>
@@ -108,10 +108,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
                             rrd4j,
-                            joda-time,
-                            commons-math,
-                            poi-scratchpad,
-                            poi
+                            joda-time
                         </Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Import-Package>
@@ -121,13 +118,11 @@
                             sun.misc;resolution:=optional,
                             sun.nio.ch;resolution:=optional,
                             com.sun.image.codec.jpeg;resolution:=optional,
+                            com.zaxxer.sparsebits;resolution:=optional,
                             org.apache.cxf.jaxrs.utils,
                             org.joda.convert;resolution:=optional,
                             org.apache.commons.collections4;resolution:=optional,
                             org.apache.commons.collections4.bidimap;resolution:=optional,
-                            org.apache.commons.math3.exception;resolution:=optional,
-                            org.apache.commons.math3.linear;resolution:=optional,
-                            org.apache.commons.math3.stat.regression;resolution:=optional,
                             *
                         </Import-Package>
                         <Export-Package />
@@ -147,7 +142,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>6.1_MB</maxArtifactSize>
+                                    <maxArtifactSize>1.3_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
