--- a/pom.xml
+++ b/pom.xml
@@ -148,13 +148,13 @@
         <abdera.version>1.1.3</abdera.version>
         <antlr.version>4.3</antlr.version>
         <apache.shiro.version>1.5.3</apache.shiro.version>
-        <asm.version>3.3.1</asm.version>
+        <asm.version>8.0.1</asm.version>
         <awaitility.version>3.1.5</awaitility.version>
         <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
         <bouncy.version>1.61</bouncy.version>
         <camel.version>2.24.2</camel.version>
         <cesium.version>1.34</cesium.version>
-        <common-compress.version>1.19</common-compress.version>
+        <commons-compress.version>1.20</commons-compress.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-codec.version>1.13</commons-codec.version>
@@ -201,7 +201,7 @@
         <httpmime.version>${httpclient.version}</httpmime.version>
         <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
-        <jackson.version>2.10.4</jackson.version>
+        <jackson.version>2.11.0</jackson.version>
         <javax.annotation-api.version>1.3</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <javax.cache.bundle.version>1.1.0_1</javax.cache.bundle.version>
@@ -231,6 +231,7 @@
         <jts.bundle.version>1.16.0_2</jts.bundle.version>
         <jts.spatial4j.version>1.16.0</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
+        <jwnl.version>1.3.3</jwnl.version>
         <karaf.version>4.2.6</karaf.version>
         <la4j.version>0.6.0</la4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -266,10 +267,11 @@
         <owasp-html-sanitizer.version>20191001.1</owasp-html-sanitizer.version>
         <ows-v_1_0_0-schema.version>1.1.0</ows-v_1_0_0-schema.version>
         <ogc-filter-v_1_1_0-schema.thirdparty.version>1.1.0_5</ogc-filter-v_1_1_0-schema.thirdparty.version>
+        <openjson.version>1.0.12</openjson.version>
         <pac4j.version>4.0.1</pac4j.version>
-        <pdfbox.version>2.0.11</pdfbox.version>
-        <poi.version>4.0.1</poi.version>
-        <xlsx.transformer.poi.version>4.1.1</xlsx.transformer.poi.version>
+        <pdfbox.version>2.0.19</pdfbox.version>
+        <poi.version>4.1.2</poi.version>
+        <xlsx.transformer.poi.version>4.1.2</xlsx.transformer.poi.version>
         <protobuf.version>3.6.1</protobuf.version>
         <proton.version>0.31.0</proton.version>
         <qpid-jms.version>0.39.0</qpid-jms.version>
@@ -277,9 +279,8 @@
         <sardine.version>5.7</sardine.version>
         <hazelcast.version>3.12.3</hazelcast.version>
         <saxon.version>9.6.0-4</saxon.version>
+        <servicemix.bundles.poi.version>${poi.version}_1</servicemix.bundles.poi.version>
         <servicemix-depends.version>1.4.0</servicemix-depends.version>
-        <servicemix-json-1.1.spec.version>2.9.0</servicemix-json-1.1.spec.version>
-        <servicemix.specs.version>2.9.0</servicemix.specs.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <smtp.client.version>1.7.1</smtp.client.version>
         <solr.version>8.5.0</solr.version>
@@ -292,8 +293,8 @@
         <spatial4j.version>0.7</spatial4j.version>
         <spring.version>5.1.7.RELEASE</spring.version>
         <spring-osgi.version>1.2.1</spring-osgi.version>
-        <tika.thirdparty.bundle.version>1.22.0_2</tika.thirdparty.bundle.version>
-        <tika.version>1.22</tika.version>
+        <tika.thirdparty.bundle.version>1.24.1_1</tika.thirdparty.bundle.version>
+        <tika.version>1.24.1</tika.version>
         <usng4j.version>0.4</usng4j.version>
         <validation.version>1.1.0.Final</validation.version>
         <woodstox.core.version>5.3.0</woodstox.core.version>
@@ -305,10 +306,12 @@
         <xerces.version>2.12.0</xerces.version>
         <xerces.bundle.version>2.12.0_1</xerces.bundle.version>
         <xml-apis.version>1.4.01</xml-apis.version>
-        <xmlbeans.version>3.0.2</xmlbeans.version>
+        <xmlbeans.version>3.1.0</xmlbeans.version>
         <xmlsec.version>2.1.4</xmlsec.version>
         <xpp3.bundle.version>1.1.4c_6</xpp3.bundle.version>
         <xstream.version>1.4.11.1</xstream.version>
+        <zstd-jni.version>1.4.5-4</zstd-jni.version>
+
         <!-- Command line argument properties for the maven-surefire-plugin -->
         <surefire.argline.append />
         <surefire.argline>${jacoco.argline} ${surefire.argline.append} -Xmx1024m -Djava.awt.headless=true -noverify</surefire.argline>
@@ -372,7 +375,7 @@
             <dependency>
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>5.2</version>
+                <version>${asm.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.ehcache</groupId>
@@ -390,6 +393,23 @@
                 <groupId>org.codice.thirdparty</groupId>
                 <artifactId>geotools-suite</artifactId>
                 <version>${org.geotools.bundle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tika</groupId>
+                <artifactId>tika-core</artifactId>
+                <version>${tika.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tika</groupId>
+                <artifactId>tika-parsers</artifactId>
+                <version>${tika.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <!-- excluding bzip2 due to CVE-2019-12900 https://nvd.nist.gov/vuln/detail/CVE-2019-12900 -->
+                        <groupId>org.itadaki</groupId>
+                        <artifactId>bzip2</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
