corrected mvn group id for defaultmetacardtagscache

--- a/catalog/solr/catalog-solr-app/pom.xml
+++ b/catalog/solr/catalog-solr-app/pom.xml
@@ -83,7 +83,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.catalog.plugin</groupId>
+            <groupId>ddf.catalog.solr</groupId>
             <artifactId>catalog-solr-defaultmetacardtagscacheplugin</artifactId>
             <version>${project.version}</version>
         </dependency>
