DDF-6152 Added standalone solr gazetteer

--- a/catalog/solr/pom.xml
+++ b/catalog/solr/pom.xml
@@ -39,6 +39,7 @@
         <module>catalog-solr-defaultmetacardtagscacheplugin</module>
         <module>catalog-solr-provider</module>
         <module>catalog-solr-solrclient</module>
+        <module>catalog-solr-offline-gazetteer</module>
         <module>catalog-solr-app</module>
     </modules>
 </project>
