--- a/catalog/solr/catalog-solr-app/pom.xml
+++ b/catalog/solr/catalog-solr-app/pom.xml
@@ -102,5 +102,10 @@
             <artifactId>catalog-solr-commands</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.solr</groupId>
+            <artifactId>catalog-solr-offline-gazetteer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
