--- a/catalog/spatial/geocoding/spatial-geocoding-offline-index/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-offline-index/pom.xml
@@ -116,6 +116,7 @@
                         </Embed-Dependency>
                         <Import-Package>
                             !com.fasterxml.jackson*,
+                            !org.noggit,
                             *
                         </Import-Package>
                     </instructions>
