Rename platform-session-invalidator to platform-session-invalidator-api Rename security-logout-service to security-servlet-logout-api Rename security-servlet-web-socket to security-servlet-web-socket-api Rename session-management-service to session-management-api Refactor security features

--- a/platform/email/platform-email-api/pom.xml
+++ b/platform/email/platform-email-api/pom.xml
@@ -39,6 +39,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package>
+                            org.codice.ddf.platform.email
+                        </Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
