--- a/platform/platform-paxweb-jettyconfig/pom.xml
+++ b/platform/platform-paxweb-jettyconfig/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.platform</groupId>
-            <artifactId>platform-session-invalidator</artifactId>
+            <artifactId>platform-session-invalidator-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -126,6 +126,7 @@
                             !org.codehaus.janino,
                             *
                         </Import-Package>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
