--- a/platform/security/certificate/security-ocsp-checker/pom.xml
+++ b/platform/security/certificate/security-ocsp-checker/pom.xml
@@ -76,6 +76,7 @@
                         <Embed-Dependency>
                             alerts
                         </Embed-Dependency>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
