--- a/platform/security/encryption/platform-security-encryption-impl/pom.xml
+++ b/platform/security/encryption/platform-security-encryption-impl/pom.xml
@@ -71,6 +71,7 @@
                             !sun.misc.*,
                             *
                         </Import-Package>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
