--- a/platform/security/expansion/security-expansion-impl/pom.xml
+++ b/platform/security/expansion/security-expansion-impl/pom.xml
@@ -53,7 +53,7 @@
                             *
                         </Import-Package>
                         <Export-Package>
-                            ddf.security.expansion.impl;version=${project.version}
+                            ddf.security.expansion.impl
                         </Export-Package>
                     </instructions>
                 </configuration>
