--- a/platform/security/filter/security-filter-csrf/pom.xml
+++ b/platform/security/filter/security-filter-csrf/pom.xml
@@ -65,6 +65,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
