--- a/platform/security/handler/security-handler-basic/pom.xml
+++ b/platform/security/handler/security-handler-basic/pom.xml
@@ -66,6 +66,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
