--- a/platform/security/interceptor/security-interceptor-guest/pom.xml
+++ b/platform/security/interceptor/security-interceptor-guest/pom.xml
@@ -90,7 +90,10 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>httpclient,httpcore</Embed-Dependency>
+                        <Embed-Dependency>
+                            httpclient,
+                            httpcore
+                        </Embed-Dependency>
                         <Export-Package />
                     </instructions>
                 </configuration>
