--- a/platform/security/security-token-storage/token-storage-impl/pom.xml
+++ b/platform/security/security-token-storage/token-storage-impl/pom.xml
@@ -66,6 +66,7 @@
                             gson-support,
                             security-encryption-crypter
                         </Embed-Dependency>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
