--- a/platform/security/servlet/security-servlet-session-expiry/pom.xml
+++ b/platform/security/servlet/security-servlet-session-expiry/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.platform.security</groupId>
-            <artifactId>session-management-service</artifactId>
+            <artifactId>session-management-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
