--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -85,7 +85,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.platform</groupId>
-            <artifactId>platform-session-invalidator</artifactId>
+            <artifactId>platform-session-invalidator-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -265,7 +265,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.platform.security</groupId>
-            <artifactId>session-management-service</artifactId>
+            <artifactId>session-management-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -275,7 +275,7 @@
         </dependency>
         <dependency>
             <groupId>ddf.security.servlet</groupId>
-            <artifactId>security-servlet-logout-service</artifactId>
+            <artifactId>security-servlet-logout-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
