--- a/platform/security/certificate/security-certificate-keystoreeditor/pom.xml
+++ b/platform/security/certificate/security-certificate-keystoreeditor/pom.xml
@@ -84,6 +84,7 @@
                             httpclient,
                             httpcore
                         </Embed-Dependency>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
