--- a/platform/security/log-sanitizer/pom.xml
+++ b/platform/security/log-sanitizer/pom.xml
@@ -19,7 +19,6 @@
         <artifactId>platform-security</artifactId>
         <version>2.26.0-SNAPSHOT</version>
     </parent>
-    <groupId>ddf.platform.security</groupId>
     <artifactId>log-sanitizer</artifactId>
     <name>DDF :: Security :: Log Sanitizer</name>
     <packaging>bundle</packaging>
@@ -38,6 +37,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package>
+                            org.codice.ddf.log.sanitizer
+                        </Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
