--- a/platform/security/realm/security-realm-userpass/pom.xml
+++ b/platform/security/realm/security-realm-userpass/pom.xml
@@ -63,9 +63,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Import-Package>
-                            *
-                        </Import-Package>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
