--- a/platform/security/rest/security-rest-cxfwrapper/pom.xml
+++ b/platform/security/rest/security-rest-cxfwrapper/pom.xml
@@ -174,6 +174,7 @@
                             gson-support,
                             google-http-client
                         </Embed-Dependency>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
