--- a/platform/security/servlet/security-servlet-default-logout/pom.xml
+++ b/platform/security/servlet/security-servlet-default-logout/pom.xml
@@ -59,10 +59,8 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Import-Package>
-                            *
-                        </Import-Package>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Export-Package />
                     </instructions>
                 </configuration>
             </plugin>
