--- a/platform/security/servlet/security-servlet-logout-api/pom.xml
+++ b/platform/security/servlet/security-servlet-logout-api/pom.xml
@@ -19,8 +19,8 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>security-servlet-logout-service</artifactId>
-    <name>DDF :: Security :: Servlet :: Logout :: Service</name>
+    <artifactId>security-servlet-logout-api</artifactId>
+    <name>DDF :: Security :: Servlet :: Logout API</name>
     <packaging>bundle</packaging>
 
     <dependencies>
@@ -42,6 +42,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                     </instructions>
+                    <Export-Package>
+                        org.codice.ddf.security.logout.service
+                    </Export-Package>
                 </configuration>
             </plugin>
         </plugins>
