DDF-6168 Endorse saaj-api and activation-api ServiceMix spec bundles
Endorses ServiceMix saaj-api and activation-api bundles and exports
their packages from bundle 0. This fixes an issue in Karaf causing
linkage errors.

--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,7 @@
         <saxon.version>9.6.0-4</saxon.version>
         <servicemix.bundles.poi.version>${poi.version}_1</servicemix.bundles.poi.version>
         <servicemix-depends.version>1.4.0</servicemix-depends.version>
+        <servicemix.specs.version>2.9.0</servicemix.specs.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <smtp.client.version>1.7.1</smtp.client.version>
         <solr.version>8.5.0</solr.version>
