--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -262,13 +262,13 @@
                                 <artifactItem>
                                     <groupId>org.apache.servicemix.specs</groupId>
                                     <artifactId>org.apache.servicemix.specs.saaj-api-1.3</artifactId>
-                                    <version>2.9.0</version>
+                                    <version>${servicemix.specs.version}</version>
                                     <outputDirectory>${setup.folder}/endorsed</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.servicemix.specs</groupId>
                                     <artifactId>org.apache.servicemix.specs.activation-api-1.1</artifactId>
-                                    <version>2.9.0</version>
+                                    <version>${servicemix.specs.version}</version>
                                     <outputDirectory>${setup.folder}/endorsed</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
