Move some features around Add doPrivileged calls and permissions to application service Export security policy context package for itests

--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -324,6 +324,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>${javax-mail-version}</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.platform.email</groupId>
             <artifactId>platform-email-api</artifactId>
             <version>${project.version}</version>
