DDF-6215 Upgrade to Karaf v4.2.9

--- a/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
@@ -4,17 +4,17 @@ mvn\:ddf.platform.osgi/platform-osgi-condpermadmin/${project.version}=2
 mvn\:ddf.platform.osgi/platform-osgi-conditions/${project.version}=2
 mvn\:org.codice.acdebugger/acdebugger-api/${acdebugger.version}=2
 mvn\:org.codice.acdebugger/acdebugger-backdoor/${acdebugger.version}=2
-mvn\:org.apache.felix/org.apache.felix.metatype/1.2.2=5
+mvn\:org.apache.felix/org.apache.felix.metatype/${felix.metatype.version}=5
 mvn\:org.apache.karaf.services/org.apache.karaf.services.eventadmin/${karaf.version}=5
 mvn\:org.ops4j.pax.url/pax-url-aether/${pax.url.version}=5
 mvn\:org.fusesource.jansi/jansi/1.18 = 8
-mvn\:org.ops4j.pax.logging/pax-logging-api/1.10.2=8
-mvn\:org.ops4j.pax.logging/pax-logging-log4j2/1.10.2=8
-mvn\:org.apache.felix/org.apache.felix.coordinator/1.0.2 = 9
+mvn\:org.ops4j.pax.logging/pax-logging-api/${pax.logging.version}=8
+mvn\:org.ops4j.pax.logging/pax-logging-log4j2/${pax.logging.version}=8
+mvn\:org.apache.felix/org.apache.felix.coordinator/${felix.coordinator.version} = 9
 # These two osgi bundles need to start before configadmin in order to register
 # DDF's custom PersistenceManager.
 mvn\:ddf.platform.osgi/platform-osgi-internal-api/${project.version}=9
 mvn\:ddf.platform.osgi/platform-osgi-configadmin/${project.version}=10
 mvn\:org.apache.felix/org.apache.felix.configadmin/${felix.configadmin.version}=11
-mvn\:org.apache.felix/org.apache.felix.fileinstall/3.6.4=12
+mvn\:org.apache.felix/org.apache.felix.fileinstall/${felix.fileinstall.version}=12
 mvn\:org.apache.karaf.features/org.apache.karaf.features.core/${karaf.version}=15
