--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,9 @@
         <junit.version>4.12</junit.version>
         <mockito.version>2.8.47</mockito.version>
         <pax.exam.version>4.13.2.CODICE</pax.exam.version>
-        <pax.url.version>2.6.1</pax.url.version>
-        <pax.web.version>7.2.11</pax.web.version>
+        <pax.logging.version>1.11.6</pax.logging.version>
+        <pax.url.version>2.6.2</pax.url.version>
+        <pax.web.version>7.2.16</pax.web.version>
         <restito.version>0.8.2</restito.version>
         <xmlunit.version>1.4</xmlunit.version>
         <xmlunit-matchers.version>2.5.1</xmlunit-matchers.version>
@@ -152,12 +153,14 @@
         <awaitility.version>3.1.5</awaitility.version>
         <aws-java-sdk-bundle.version>1.11.344_1</aws-java-sdk-bundle.version>
         <bouncy.version>1.61</bouncy.version>
+        <cal10n.version>0.8.1</cal10n.version>
+        <cal10n.thirdparty.bundle.version>${cal10n.version}_1</cal10n.thirdparty.bundle.version>
         <camel.version>2.24.2</camel.version>
         <cesium.version>1.34</cesium.version>
         <commons-compress.version>1.20</commons-compress.version>
         <commons.fileupload.version>1.3.3</commons.fileupload.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
-        <commons-codec.version>1.13</commons-codec.version>
+        <commons-codec.version>1.14</commons-codec.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-configuration.version>1.10</commons-configuration.version>
@@ -182,7 +185,10 @@
         <dropwizard.version>3.2.6</dropwizard.version>
         <equinox.version>3.13.0</equinox.version>
         <fabric8.version>3.0.12</fabric8.version>
-        <felix.configadmin.version>1.9.14</felix.configadmin.version>
+        <felix.configadmin.version>1.9.16</felix.configadmin.version>
+        <felix.coordinator.version>1.0.2</felix.coordinator.version>
+        <felix.fileinstall.version>3.6.6</felix.fileinstall.version>
+        <felix.metatype.version>1.2.2</felix.metatype.version>
         <felix.framework.version>5.6.12</felix.framework.version>
         <felix.scr.version>2.0.14</felix.scr.version>
         <ftpserver-version>1.0.6</ftpserver-version>
@@ -202,7 +208,8 @@
         <jai-imageio-core.version>1.3.1</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
         <jackson.version>2.11.0</jackson.version>
-        <javax.annotation-api.version>1.3</javax.annotation-api.version>
+        <jasypt.version>1.9.3</jasypt.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
         <javax.cache.bundle.version>1.1.0_1</javax.cache.bundle.version>
         <javax.inject.version>1</javax.inject.version>
@@ -216,7 +223,7 @@
         <jcodec.version>0.2.0_1</jcodec.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
         <jetty.solr.version>9.4.19.v20190610</jetty.solr.version>
-        <jetty.version>9.4.18.v20190429</jetty.version>
+        <jetty.version>9.4.28.v20200408</jetty.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
         <jodah-failsafe.version>0.9.5</jodah-failsafe.version>
@@ -232,7 +239,7 @@
         <jts.spatial4j.version>1.16.0</jts.spatial4j.version>
         <jvnet-ogc.version>2.6.1</jvnet-ogc.version>
         <jwnl.version>1.3.3</jwnl.version>
-        <karaf.version>4.2.6</karaf.version>
+        <karaf.version>4.2.9</karaf.version>
         <la4j.version>0.6.0</la4j.version>
         <log4j.version>1.2.17</log4j.version>
         <apache-log4j.version>2.11.2</apache-log4j.version>
@@ -262,7 +269,7 @@
         <!-- Note: The swissbox version needs to match the version used by pax-exam . -->
         <org.ops4j.pax.swissbox.version>1.8.2</org.ops4j.pax.swissbox.version>
         <org.rrd4j.version>3.3.1</org.rrd4j.version>
-        <org.slf4j.version>1.7.1</org.slf4j.version>
+        <org.slf4j.version>1.7.29</org.slf4j.version>
         <osgi.version>5.0.0</osgi.version>
         <owasp-html-sanitizer.version>20191001.1</owasp-html-sanitizer.version>
         <ows-v_1_0_0-schema.version>1.1.0</ows-v_1_0_0-schema.version>
@@ -292,7 +299,7 @@
         <solr.spatial4j.version>0.7</solr.spatial4j.version>
         <spark.version>2.5.5</spark.version>
         <spatial4j.version>0.7</spatial4j.version>
-        <spring.version>5.1.7.RELEASE</spring.version>
+        <spring.version>5.2.5.RELEASE</spring.version>
         <spring-osgi.version>1.2.1</spring-osgi.version>
         <tika.thirdparty.bundle.version>1.24.1_1</tika.thirdparty.bundle.version>
         <tika.version>1.24.1</tika.version>
