DDF-UI-248 cleanup and use enum on backend

--- a/catalog/ui/catalog-ui-search-api/pom.xml
+++ b/catalog/ui/catalog-ui-search-api/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>platform-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
